--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   animated_bottom_navigation_bar: ^1.4.0
   stop_watch_timer: ^1.3.1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
