--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.4.0
   stop_watch_timer: ^1.3.1
   get_storage: ^2.1.1
+  curved_labeled_navigation_bar: ^2.0.6
 
 dev_dependencies:
   flutter_test:
