--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   stop_watch_timer: ^1.3.1
   get_storage: ^2.1.1
   curved_labeled_navigation_bar: ^2.0.6
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
