--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_storage: ^2.1.1
   curved_labeled_navigation_bar: ^2.0.6
   dropdown_button2: ^2.3.9
+  flutter_slidable: ^3.1.2
 
 dev_dependencies:
   flutter_test:
