--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,15 @@ dependencies:
   curved_labeled_navigation_bar: ^2.0.6
   dropdown_button2: ^2.3.9
   flutter_slidable: ^3.1.2
+  http: ^1.3.0
+  html: ^0.15.6
+  fade_shimmer: ^2.3.0
+  cached_network_image: ^3.4.1
+  flutter_inappwebview: ^6.1.5
+  url_launcher: ^6.3.1
+
+ 
+
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
