--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   url_launcher: ^6.3.1
   flutter_native_splash: ^2.4.4
-
+  redacted: ^1.0.13
+  
  
 
 
